# GCP-IAM-Janitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG_AUTO_REFRESH.md  Dockerfile  README.md  app.py  app_advanced.py  app_consolidation.py  app_enhanced.py  app_simple.py  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: docker-build.yml
scripts/: deploy-registry.sh  deploy.sh  health-check.sh
src/analytics/: insights.py
src/auth/: credentials.py
src/compliance/: __init__.py  compliance_analyzer.py
src/gcp/: audit_analyzer.py  cloudfast_analyzer.py  group_analysis_client.py  iam_client.py  identity_client.py  org_client.py  permission_analyzer.py  project_client.py  role_management_client.py
src/models/: iam_models.py
src/pages/: overview.py
src/utils/: cache.py  command_generator.py
